league 1/competition-simulator-sr2021-kickstart/zone-0/log-zone-0-2021-01-16T00_52_11.073877.txt
0| Running simulator version sr2020-knockouts-196-ga3856da (rev a3856da5a63c700fcd3a021170477fa65be5e9e0)
0| Using C:\Users\User\Documents\A LEVEL COMPUTER SCIENCE\Student Robotics\competition-simulator-sr2021-kickstart\zone-0\robot.py for Zone 0
0| Traceback (most recent call last):
0|   File "sr_controller.py", line 254, in <module>
0|   File "sr_controller.py", line 250, in main
0|   File "<string>", line 127
0|     startTurning = False
0|                        ^
0| IndentationError: unindent does not match any outer indentation level
